--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,10 +7,24 @@
     <filter>
         <filter-name>AuthorizationFilter</filter-name>
         <filter-class>filters.AuthorizationFilter</filter-class>
+        <init-param>
+            <param-name>code</param-name>
+            <param-value>mafd</param-value>
+        </init-param>
     </filter>
 
     <filter-mapping>
         <filter-name>AuthorizationFilter</filter-name>
         <url-pattern>/controller</url-pattern>
     </filter-mapping>
+
+    <error-page>
+        <exception-type>java.lang.Exception</exception-type>
+        <location>/error</location>
+    </error-page>
+
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error</location>
+    </error-page>
 </web-app>
